# blinc_node_editor

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
src/: bezier.rs  config.rs  connection.rs  content_schema.rs  editor.rs  event.rs  group.rs  history.rs  icon.rs  inspector.rs  interaction.rs  layout.rs  lib.rs  minimap.rs  node.rs  palette.rs  port.rs  region.rs  render.rs  schema_walker.rs  slot.rs  subgraph.rs  theme.rs
